0008: module 5 lesson 4 start

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,17 @@
+# pytest.ini
+
 [pytest]
+addopts =
+    -v
+    -ra
+    --strict-markers
+    --cov=src
+    --cov-report=term-missing
+    --cov-report=html
+
+# Где искать тесты
+testpaths = tests
+
 markers =
     smoke: Дымовые тесты для критического функционала
     regression: Полный набор регрессионных тестов
