--- a/pytest.ini
+++ b/pytest.ini
@@ -5,9 +5,14 @@ addopts =
     -v
     -ra
     --strict-markers
+    # Запускать тесты параллельно по умолчанию
+    -n auto
+    # Рекомендация для группировки тестов
+    # --dist=loadfile
     --cov=src
     --cov-report=term-missing
     --cov-report=html
+
 
 # Где искать тесты
 testpaths = tests
